Complete archive collection phase, including merged jmods. Use jmods as source of Java modules names in DelegatingArchive. Fix trailing ".0" version parse issue.